# okami-apclient

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vsconfig  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  format.sh  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  memory_id_mapping.md  memory_id_mapping.yml
.github/workflows/: build.yml  release.yml
cmake/: GitVersion.cmake  GitVersion.h.in  SimpleGitVersion.cmake  compiler_setup.cmake  generate_sources.cmake  resources.rc.in
cmake/toolchains/: llvm-mingw.cmake  mingw-w64.cmake
cmake/vcpkg-overlays/minhook/: portfile.cmake
cmake/vcpkg-overlays/triplets/: x64-mingw-llvm-static.cmake
docs/: architecture.md  development.md  game-state-yaml.md  gamestateregistry.md  memory-mapping.md  mod-flow.md  server-protocol.md
inc/: dllmain.h
include/: apitems.hpp  containers.json  wolf_framework.hpp
include/okami/: acquisition.hpp  ammy.hpp  animals.cpp  animals.hpp  bestiarytome.cpp  bestiarytome.hpp  bitfieldflags.hpp  bitfieldmonitor.hpp  blowfish.hpp  brushes.hpp  configmanager.h  customiconpkg.hpp  custommodelpkg.hpp  devdatafinderdesc.h  devdatamapdata.h  dojotech.cpp  dojotech.hpp  filebuffer.h  fish.cpp  fish.hpp  flagedgedetector.hpp  gamestateregistry.h  igamestateregistry.h  itemparam.hpp  items.hpp  itemtype.hpp  maps.hpp  maptype.hpp  memory.hpp  memoryaccessor.hpp  memorymap.cpp  memorymap.hpp  movelisttome.cpp  movelisttome.hpp  msd.h  offsets.hpp  okami.hpp  resourcepkg.hpp  shopdata.h  spawntable.h  (+8 more)
include/okami/data/: bitfield.hpp  brushtype.hpp  dataverify.cpp  itemparam.hpp  itemtype.hpp  logbook.hpp  maptype.cpp  maptype.hpp  savefile.hpp  structs.hpp  wkmath.hpp
scripts/: generate_apitems.py  validate_game_data.py
src/: archipelago.cpp  archipelago.h  core.cpp  core.h  dllmain.cpp  gamehandler.cpp  gamehandler.h  memtable.cpp  memtable.h  okami.cpp  okami.h  pch.h
src/client/: aplocationmonitor.cpp  aplocationmonitor.h  archipelago.cpp  archipelago.h  archipelagosocket.cpp  archipelagosocket.h  checks.cpp  checks.h  console.cpp  console.h  devdatafinder.cpp  devdatafinder.h  devdatafinderdesc.cpp  devdatafinderdesc.h  devdatamapdata.cpp  devdatamapdata.h  devtools.cpp  devtools.h  dllmain.cpp  frametimer.h  framework.h  gamehandler.cpp  gamehooks.cpp  gamehooks.h  gui.cpp  gui.h  isocket.h  logger.cpp  logger.h  loginwindow.cpp  loginwindow.h  okami.cpp  okami.h  pch.h  receive.cpp  receive.h  shop.h  shopdef.cpp  shops.cpp  sources.cmake  (+1 more)
src/loader/: dllmain.cpp  framework.h  injector.cpp  injector.h  main.cpp  pch.h
src/okami-apclient/: CMakeLists.txt  apitem.cpp  apitem.h  apitems.yml  apitems_generated.cpp  apitems_generated.hpp  aplocationmonitor.cpp  aplocationmonitor.h  archipelagosocket.cpp  archipelagosocket.h  checkman.cpp  checkman.h  containermanager.cpp  containermanager.h  framework.h  gamestate_accessors.cpp  gamestate_accessors.hpp  isocket.h  item_handlers.cpp  item_handlers.hpp  itempatch.cpp  itempatch.hpp  loginwindow.cpp  loginwindow.h  notificationwindow.cpp  notificationwindow.h  okami-apclient.cpp  rewardman.cpp  rewardman.h  saveman.cpp  saveman.h  slotconfig.cpp  slotconfig.h  sources.cmake  version_utils.h  warpwindow.cpp  window.h
src/okami-apclient/checks/: brushes.cpp  brushes.hpp  check_types.hpp  containers.cpp  containers.hpp  gamestate_monitors.cpp  gamestate_monitors.hpp  shops.cpp  shops.hpp
src/okami-apclient/data/: blowfish.cpp  customiconpkg.cpp  custommodelpkg.cpp  msd.cpp  resourcepkg.cpp  shopdata.cpp
src/okami-apclient/icons/: ap_progression.dds  ap_standard.dds  ap_trap.dds
src/okami-apclient/rewards/: brushes.cpp  brushes.hpp  event_flags.cpp  event_flags.hpp  game_items.cpp  game_items.hpp  reward_types.hpp
src/okami-apclient/ui/: loginwindow.cpp  loginwindow.h  warpwindow.cpp  warpwindow.h
src/proxy-dll/: README.md  d3d11.cpp  d3d11.def  dinput8.cpp  modloader.cpp  modloader.h
test/: mock_socket.hpp  test_archipelagosocket.cpp  test_bitflagsstorage.cpp  test_checks.cpp  test_game_data.cpp  test_locationmonitor.cpp  test_loginwindow.cpp  test_memaccess.cpp  test_receive.cpp
tests/: CMakeLists.txt  test_apitem.cpp  test_apitems.cpp  test_aplocationmonitor.cpp  test_brush_regression.cpp  test_checkman.cpp  test_containermanager.cpp  test_containermanager_hooks.cpp  test_containers.cpp  test_customiconpkg.cpp  test_gamestate_monitors.cpp  test_item_handlers.cpp  test_itempatch.cpp  test_mock_archipelagosocket.cpp  test_resourcepkg.cpp  test_reward_handlers.cpp  test_rewardman.cpp  test_saveman.cpp  test_shops.cpp  test_version_utils.cpp
tests/data/: test_containers.json
tests/harness/: test_mock_archipelagosocket.cpp
tests/mocks/: mock_archipelagosocket.cpp  mock_archipelagosocket.h  mock_isocket.h  mock_notificationwindow.cpp  mock_spawntable.h  wolf_framework.cpp  wolf_framework.hpp
